# tme-editor

./: .gitignore  README.md  TME_Template_2026.docx  requirements.txt
docs/superpowers/plans/: 2026-04-23-tme-template-post-moore-proof.md
docs/superpowers/specs/: 2026-04-23-tme-template-post-moore-proof-design.md
moore_build/: MERGE_INSTRUCTIONS.md  README.md  pyproject.toml
moore_build/src/: apply_tme_styles.py  build_moore_cover.py  fixup_moore.py
moore_build/src/moore_pipeline/: __init__.py  cover_snippet.py  endnote.py  headshots.py  moore_starter.py
moore_build/tests/: test_cover_snippet.py  test_endnote.py  test_headshots.py  test_integration.py  test_moore_starter.py
template_build/: README.md  pyproject.toml
template_build/src/: build_template.py
template_build/src/tme_template/: __init__.py  colors.py  cover_footer.py  cover_page.py  front_matter.py  headers_footers.py  headshot.py  masthead.py  oxml_helpers.py  page_setup.py  styles.py  tagline.py
template_build/tests/: conftest.py  test_colors.py  test_cover_footer.py  test_cover_page.py  test_cover_page_order.py  test_front_matter.py  test_headers_footers.py  test_headers_footers_update.py  test_headshot.py  test_integration.py  test_masthead.py  test_oxml_helpers.py  test_page_setup.py  test_styles.py  test_styles_updates.py  test_tagline.py
tme_editor_app/: Dockerfile  README.md  app.py  test_pipeline.py
tme_editor_app/src/: apply_styles.py  article_starter.py  classifier.py  extractor.py  fixup.py  pipeline.py
tme_editor_app/tests/: conftest.py  test_fixup_captions.py
