[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "moore-pipeline"
version = "1.1.0"
description = "Automated preprocessing pipeline for the Moore article (TME Vol 34 No 1)"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=0.8.11",
  "lxml>=4.9",
  "Pillow>=10.0",
  # Note: tme-template (a sibling package) is NOT listed here because it's
  # not on PyPI. The root requirements.txt installs ./template_build before
  # ./moore_build, so the import works at runtime.
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
